c/src/test/resources/syntax/bad/EmptyRun.ctrl
<controlFile>
<sourceFile name="foo.c" id="1" />
<run></run>
</controlFile>
